--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "tsx watch ./src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0"
   },
