--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "server": "tsx watch ./src/index.ts"
+    "server": "tsx watch ./src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -15,6 +16,11 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
