--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
+	 "exclude": [
+    "./jest.config.ts",
+    "./node_modules",
+    "./tests",
+    "./build"
+  ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
