--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
